# object_msgs

./: CMakeLists.txt  package.xml
msg/: Object.msg  ObjectArray.msg  ObjectStamped.msg
