<package format="2">
  <name>object_msgs</name>
  <version>0.0.0</version>
  <description>The object_msgs package</description>

  <maintainer email="kosuke@todo.todo">kk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
